// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`All tags, with override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Title from Component</title>
            <meta data-rh="true" content="Component description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="SOCIAL_TITLE" name="twitter:title"/><meta data-rh="true" content="SOCIAL_DESCRIPTION" name="twitter:description"/><meta data-rh="true" content="https://sample.domain/THUMBNAIL_PATH" name="twitter:image"/><meta data-rh="true" content="@SITE_NAME" name="twitter:site"/><meta data-rh="true" content="SOCIAL_TITLE" name="og:title"/><meta data-rh="true" content="https://sample.domain/THUMBNAIL_PATH" name="og:image"/><meta data-rh="true" content="SOCIAL_TITLE" name="og:image:alt"/><meta data-rh="true" content="SOCIAL_DESCRIPTION" name="og:description"/><meta data-rh="true" content="SITE_NAME" name="og:sitename"/><meta data-rh="true" content="PAGE_URL" name="og:url"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghgc5WRH69eBKHiBZQmMDPrDIZjS0mo8ysGCjayxGzD6WmL8eLQdJGGbkbV9YPqFyAc1uVFm6WcpMG4mD/Npa7cqgK6UVPOjCVTlFbZPBYhN1gUlx9R+UmuUKa6MNZMcJG">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><div><p>A dummy internal component.</p></div></div></div>
            
            
          </body>
        </html>"
`;

exports[`Basic tags, no override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Application Title</title>
            <meta data-rh="true" content="Application Description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Application Title" name="twitter:title"/><meta data-rh="true" content="Application Description" name="twitter:description"/><meta data-rh="true" content="Application Title" name="og:title"/><meta data-rh="true" content="Application Description" name="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghgc5WRH69eBKHiBZQmMDPrDIZjS0mo8ysGCjayxGzD6WmL8eLQdJGGbkbV9YPqFyAc1uVFm6WcpMG4mD/Npa7cqgK6UVPOjCVTlFbZPBYhN1gUlx9R+UmuUKa6MNZMcJG">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p></div></div>
            
            
          </body>
        </html>"
`;

exports[`Basic tags, with override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Title from Component</title>
            <meta data-rh="true" content="Component description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Title from Component" name="twitter:title"/><meta data-rh="true" content="Component description" name="twitter:description"/><meta data-rh="true" content="Title from Component" name="og:title"/><meta data-rh="true" content="Component description" name="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghgc5WRH69eBKHiBZQmMDPrDIZjS0mo8ysGCjayxGzD6WmL8eLQdJGGbkbV9YPqFyAc1uVFm6WcpMG4mD/Npa7cqgK6UVPOjCVTlFbZPBYhN1gUlx9R+UmuUKa6MNZMcJG">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><div><p>A dummy internal component.</p></div></div></div>
            
            
          </body>
        </html>"
`;

exports[`Using <MetaTags> children feature Basic tags, no override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Application Title</title>
            <meta data-rh="true" content="Application Description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Application Title" name="twitter:title"/><meta data-rh="true" content="Application Description" name="twitter:description"/><meta data-rh="true" content="Application Title" name="og:title"/><meta data-rh="true" content="Application Description" name="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghgc5WRH69eBKHiBZQmMDPrDIZjS0mo8ysGCjayxGzD6WmL8eLQdJGGbkbV9YPqFyAc1uVFm6WcpMG4mD/Npa7cqgK6UVPOjCVTlFbZPBYhN1gUlx9R+UmuUKa6MNZMcJG">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p></div></div>
            
            
          </body>
        </html>"
`;

exports[`Using <MetaTags> children feature Basic tags, with override 1`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Title from Component - Application Title</title>
            <meta data-rh="true" content="Component description - Application Description" name="description"/><meta data-rh="true" content="summary_large_image" name="twitter:card"/><meta data-rh="true" content="Title from Component - Application Title" name="twitter:title"/><meta data-rh="true" content="Component description - Application Description" name="twitter:description"/><meta data-rh="true" content="Title from Component - Application Title" name="og:title"/><meta data-rh="true" content="Component description - Application Description" name="og:description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghgc5WRH69eBKHiBZQmMDPrDIZjS0mo8ysGCjayxGzD6WmL8eLQdJGGbkbV9YPqFyAc1uVFm6WcpMG4mD/Npa7cqgK6UVPOjCVTlFbZPBYhN1gUlx9R+UmuUKa6MNZMcJG">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><div><p>A dummy internal component.</p></div></div></div>
            
            
          </body>
        </html>"
`;
